Tue 20 Jul 2004 19:51:32 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o bug fixed: @dcop with more than 4 arguments
	o bug fixed: in @forEach, @var_count has incorrect value
	o in @forEach, @var_index has now 1-based index, not 0-based
	o setMaximum for ProgressBar

Mon 19 Jul 2004 11:47:58 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o ScriptObject widget - hidden widget for

Fri 16 Jul 2004 15:37:41 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added Slider widget
	o removed some obsolete code from editor
	o added ScriptObject - hidden script container

Thu 15 Jul 2004 23:22:33 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added TextBrowser widget for rich text viewing, with clickable 
	  links
	o in @forEach, not only @var, but @var_index and @var_count are
	  expanded (first to index of current item, second to item count)
	o fixed version number in Editor

Wed 14 Jul 2004 12:22:33 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added @String.args (based on Qt QString("%1").arg()
	o support parameters in function browser

Tue 13 lip 2004 22:33:19 CEST
	o added support for internationalizatiof Kommander dialogs
	o added @i18n special for marking strings for translation

Tue 13 Jul 2004 13:33:00 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o function browser: support for nested functions
	o function browser: properly prefix function groups with @
	o function browser: add information about obligatory and optional
	  parameters.
	o function browser: add clear button
	o Kommander Text Editor: change buttons order

Tue 13 Jul 2004 01:10:34 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added function browser for editor

Sat 10 Jul 2004 15:51:07 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o forEach(variable, list) function for internal loops
	o for(variable, start, end, [step]) function for internal loops
	o Kommander 1.0alpha7 released

Fri 09 Jul 2004 17:39:43 CEST - Michal Rudolf <mrudolf@kdewebdev.org>